<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">


    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_black_28dp"
        android:orderInCategory="101"
        android:title="@string/action_add"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_28dp"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_import"
        android:title="@string/action_import"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="1"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />


</menu>